crates/oxide-code/src/tui/components/input/snapshots/ox__tui__components__input__popup__tests__render_alias_match_parenthesizes_only_typed_alias.snap
---
source: crates/oxide-code/src/tui/components/input/popup.rs
expression: "render_to_backend(&popup, 60)"
---
"────────────────────────────────────────────────────────────"
"/clear (new)  wipe transcript                               "
