crates/oxide-code/src/tui/components/input/snapshots/ox__tui__components__input__popup__tests__render_arg_mode_lists_curated_roster_without_slash_prefix.snap
---
source: crates/oxide-code/src/tui/components/input/popup.rs
assertion_line: 449
expression: "render_to_backend(&popup, 60)"
---
"low     Fastest, shallow reasoning                          "
"medium  Balanced                                            "
"high    Deep reasoning                                      "
"xhigh   Extended thinking                                   "
"max     Maximum thinking                                    "
