crates/oxide-code/src/tui/components/input/snapshots/ox__tui__components__input__popup__tests__render_arg_mode_prefix_filters_to_subset.snap
---
source: crates/oxide-code/src/tui/components/input/popup.rs
assertion_line: 430
expression: "render_to_backend(&popup, 60)"
---
"mocha      Catppuccin dark (default)                        "
"macchiato  Catppuccin dark (medium)                         "
"material   Material dark                                    "
