crates/oxide-code/src/tui/components/input/snapshots/ox__tui__components__input__popup__tests__render_empty_name_query_shows_each_command_once.snap
---
source: crates/oxide-code/src/tui/components/input/popup.rs
expression: "render_to_backend(&popup, 60)"
---
"────────────────────────────────────────────────────────────"
"/clear    Reset the conversation context                    "
"/compact  Compress conversation context into a summary      "
"/config   Show resolved config                              "
"/delete   Delete a saved session                            "
"/diff     Show uncommitted working-tree changes             "
"/effort   Adjust reasoning effort                           "
"/help     List slash commands                               "
"/init     Set up `AGENTS.md` / `CLAUDE.md`                  "
