crates/oxide-code/src/tui/components/input/snapshots/ox__tui__components__input__popup__tests__render_empty_query_shows_each_command_once.snap
---
source: crates/oxide-code/src/tui/components/input/popup.rs
assertion_line: 296
expression: "render_to_backend(&popup, 60)"
---
"/clear   Reset the conversation context                     "
"/config  Show the resolved configuration and the layered ..."
"/diff    Show uncommitted working-tree changes (`git diff..."
"/effort  Open the effort slider or switch directly with `..."
"/help    List the available slash commands and their usag..."
"/init    Generate or update the project's `AGENTS.md` / `..."
"/model   Open the model picker or switch directly with `/..."
"/status  Show session info: model, effort, version, worki..."
"  ... (1 more)                                              "
