crates/oxide-code/src/tui/components/input/snapshots/ox__tui__components__input__popup__tests__render_filtered_name_query_shows_only_matching_rows.snap
---
source: crates/oxide-code/src/tui/components/input/popup.rs
expression: "render_to_backend(&popup, 60)"
---
"────────────────────────────────────────────────────────────"
"/help  List the available slash commands and their usage ..."
