crates/oxide-code/src/tui/components/input/snapshots/ox__tui__components__input__popup__tests__render_narrow_terminal_truncates_description.snap
---
source: crates/oxide-code/src/tui/components/input/popup.rs
assertion_line: 527
expression: "render_to_backend(&popup, 30)"
---
"──────────────────────────────"
"/clear   Reset the conversa..."
"/config  Show the resolved ..."
"/diff    Show uncommitted w..."
"/effort  Adjust reasoning e..."
"/help    List the available..."
"/init    Generate or update..."
"/model   Switch the model     "
"/rename  Rename the current..."
